# code_test_records

./: .gitignore  Jenkinsfile  Jenkinsfile-windows  LICENSE
GPT/: gpt4all_test.py
awk/: output_multi_var.awk  start.sh  start_v2.sh  t2.awk  t3.awk  t4.awk  test.awk  test_output_multi_var.sh
blog/: OPENSSL编程入门学习.docx  blog.txt  crawler.txt  iptable 1.1.19指南.doc  撰写 Adblock Plus 过滤规则.txt
c/: Makefile  align.c  array_test.c  comma_test.c  conn_timeout.c  dowhile-continue.c  encode-chinese-test.c  exec.c  file_eof_test.c  file_max_open_test.c  loop.c  pcap_parse.c  signed_int.c  singend_int_minus_test.c  t_shift.c  test_itoa.c  test_madvise.c  test_micro_definition.c  test_subtraction_overflow.c  testfork.c  visit_dir.c
c++/: a.cc  c_2_4.cc  cout_fill.cc  inherit.cc  inherit_no_virtual.cc  makefile  max.cc  sigsegv_caught.cc  sigsegv_caught_by_sigsetjmp.cc  smart_repeat.cc
code-format/: cindent.sh
db2/: 1_start_by_docker.sh  2_login_db2_instance.sh  3_config_db2.sh  4_create_procedure.sql  5_db2look.sh  6_create_partition_table.sql  docker_db2_notes.txt
db2-exercise/: basic-opera.sql  exec-db2.sh
ffmpeg/: 2_split_or_merge_video.md  merge_audio_video.txt
gdb/: Makefile  notbedebuged.c
go/: 1_setChinaGoProxy.sh  2_install_go_tool.sh  nilChannel.go  proc.go  s.go  ut.sh
iptables/: 1_usages.md
java/: EnumStudy.java  Music.java  NameResolve.java  QuickSort.java  Singleton.java  pom.xml
js/: 1_get_html_innertext.js
k8s/: 1_install_kubelet.sh  1_prepare.sh  2_init_master_node.sh  install_kubectl.sh  install_kubectl_convert.sh
mariadb-exercise/: initialize_mariadb_data.sh
mysql-exercise/: create_1017_columns.sh  create_table_ddl.py  sequence_next.sql
mysql-test/: 1_test_suite_main.sh  3_test_collations.sh
pcs/: 1_install.sh  2_create_pcs_cluster.txt  3_create_vip.txt  (+1 more)
rust/downloadfile/: Cargo.toml  resource.yml
rust/downloadfile/src/: logini.rs  main.rs  yaml_conf.rs
rust/stock_bj/: Cargo.toml  readme.md
rust/stock_bj/src/: main.rs
rust/stock_bj/src/trading_system/: backtest.rs  market_data.rs  mod.rs  order.rs  risk_management.rs  strategy.rs
(+802 files in other folders)
