[package]
name = "downloadfile"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version = "0.3.5", features = ["full"] }
tokio = { version = "1.8.4", features = ["full"] }
reqwest = "0.10.9"
structopt = "0.3.21"
futures = "0.3.8"
anyhow = "1.0.34"
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
